- Corrected overflow-x for footer (14/07/2026)

--- a/public/css/emails.css
+++ b/public/css/emails.css
@@ -113,6 +113,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -626,7 +627,7 @@ footer {
   background-color: var(--primary);
   border-top: solid grey 2px;
   margin-top: 3em;
-  margin-left: calc(50% - 50.4vw);
+  margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   padding: 2em 0 3em 0;
   width: 100vw;
@@ -694,6 +695,4 @@ h4,
 h5,
 h6 {
   margin: 0.25em auto;
-}
-
-/*# sourceMappingURL=emails.css.map */
+}/*# sourceMappingURL=emails.css.map */
