--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -423,6 +423,7 @@ template {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -1252,7 +1253,7 @@ footer {
   background-color: var(--primary);
   border-top: solid grey 2px;
   margin-top: 3em;
-  margin-left: calc(50% - 50.4vw);
+  margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   padding: 2em 0 3em 0;
   width: 100vw;
@@ -1342,4 +1343,4 @@ footer .made-by {
   a[href]::after {
     content: none;
   }
-}
+}/*# sourceMappingURL=styles.css.map */
